# niceplotly-resampler

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
example/: basic.py
niceplotly_resampler/: event_handlers.py  figure_resampler.py  gap_handler.py  nicegui_plotly_handler.py
test/: tempCodeRunnerFile.py  test.py
